# fluffydiver_vita

./: .gitignore  CMakeLists.txt  jni_environment.c  list.txt  rebuild_project.sh
include/: android_patch.h  config.h  dialog.h  fios.h  jni_patch.h  so_util.h
jni/: android_stubs.c  falsojni.c  jni_environment.c  jni_patch.c  jni_patch.c.backup  minimal_function_test.c  so_util.c  so_util.h  so_util_simple.c  so_util_simple.h
lib/: README.md
src/: android_api.c  android_patch.c  config.c  default_dynlib.c  dialog.c  fios.c  io_patch.c  jni_patch.c  main.c  pthread_patch.c  so_util.c  sys_utils.c
